Occitan translation update

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -128,3 +128,8 @@ privateBrowsingMessage=%S memorizarà vòstres onglets actuals per quand aurètz
 privateBrowsingYesTitle=&Aviar la navigacion privada
 privateBrowsingNoTitle=&Anullar
 privateBrowsingNeverAsk=&Do not show this message again
+privateBrowsingMessageHeader=Volètz aviar la navigacion privada ?
+
+
+editBookmark.removeBookmarks.label=Suprimir lo marcapaginas;Suprimir los #1 marcapaginas
+
