--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -83,3 +83,9 @@ OrganizerQueryDownloads=Telecargaments
 OrganizerQueryAllBookmarks=Totes los marcapaginas
 tagResultLabel=Etiqueta
 bookmarkResultLabel=Marcapaginas
+
+lockPrompt.title=Error d'aviada del navigador
+lockPrompt.text=Los marcapaginas e l'istoric del sistèma foncionaràn pas per çò que un dels fichièrs de %S es utilizat per un autre programa. Lo problèma pòt venir d'un logicial de seguretat.
+lockPromptInfoButton.label=Ne saber mai
+lockPromptInfoButton.accessKey=s
+
