Updated Occitan translation

--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -22,3 +22,4 @@ UnexpectedCanvasVariantStyle=canvas : una temptativa per afectar una valor a «
 EmptyGetElementByIdParam=Una cadena voida es estada transmesa a getElementById().
 LowMemoryTitle=Warning: Pauc de memòria
 LowMemoryMessage=Un escript sus aquesta pagina s'es arrestat per çò que i a pauc de memòria.
+WrongEventPropertyAccessWarning=La proprietat "%S" d'un eveniment "%S" se deu pas utilizar. Aquesta valor a pas de sens.
