--- a/browser/chrome/browser/aboutRights.properties
+++ b/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
 buttonLabel = Coneissètz vòstres dreches…
 buttonAccessKey = C
-notifyText = %S es un logicial liure, gratís e dobèrt de la fondacion sens tòca lucrativa Mozilla Foundation.
+notifyRightsText = %S es un logicial liure, gratís e dobèrt de la fondacion sens tòca lucrativa Mozilla Foundation.
