Updated Occitan translation

--- a/toolkit/chrome/places/places.properties
+++ b/toolkit/chrome/places/places.properties
@@ -6,5 +6,9 @@ finduri-AgeInDays-is-0=Uèi
 finduri-AgeInDays-is-1=Ièr
 finduri-AgeInDays-is=Fa %S jorns
 finduri-AgeInDays-isgreater=Mai de %S jorns
+finduri-AgeInDays-last-is=Los %S darrièrs jorns
+finduri-AgeInMonths-is-0=Aqueste mes
+finduri-AgeInMonths-isgreater=Mai de %S meses
 localhost=(fichièrs locals)
 bookmarksArchiveFilename=marcapaginas-%S.json
+
