--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -4,6 +4,9 @@ nv_stopped=Arrestat
 openFile=Dobrir lo fichièr
 droponbookmarksbutton=Depausatz un ligam per crear un signat cap a aqueste
 dropondownloadsbutton=Depausatz un ligam o un fichièr per lo telecargar
+
+droponnewtabbutton=Depausatz un ligam o un fichièr per lo fichièr dins un onglet novèl
+
 droponnewwindowbutton=Depausatz un ligam o un fichièr per lo dobrir dins una fenèstra novèla
 droponhomebutton=Far d'aqueste ligam vòstra pagina d'acuèlh
 droponhometitle=Definir la pagina d'acuèlh
@@ -129,3 +132,20 @@ privateBrowsingMessageHeader=Volètz aviar la navigacion privada ?
 
 editBookmark.removeBookmarks.label=Suprimir lo marcapaginas;Suprimir los #1 marcapaginas
 
+# Geolocation UI
+geolocation.tellThem=Lor dire
+geolocation.tellThemKey=o
+geolocation.dontTellThem=Lor dire pas
+geolocation.dontTellThemKey=p
+geolocation.siteWantsToKnow=%S vòl conéisser ont sètz.
+
+menuRestoreAllWindows.label=Restaurar totas las fenèstras
+menuRestoreAllWindows.accesskey=R
+
+menuUndoCloseWindowLabel=#1 (e #2 autre onglet);#1 (e #2 autres onglets)
+menuUndoCloseWindowSingleTabLabel=#1
+
+sanitizeDialog2.everything.title=Voidar l'istoric complet
+sanitizeButtonOK=Voidar ara
+sanitizeEverythingWarning=L'istoric complet serà voidat. Vòstre istoric conten una visita de pagina dempuèi %S.;L'istoric complet serà voidat. Vòstre istoric conten #1 visitas de paginas dempuèi %S.
+sanitizeEverythingNoVisitsWarning=L'istoric complet serà voidat.
