--- a/browser/chrome/browser/pageInfo.properties
+++ b/browser/chrome/browser/pageInfo.properties
@@ -33,5 +33,6 @@ generalSiteIdentity=Aqueste sit web aparten a %S\nFoguèt verificat per %S
 feedRss=RSS
 feedAtom=Atom
 feedXML=XML
+securityNoOwner=Aqueste sit web balha pas d'entresenhas sul proprietari.
 securityOneVisit=Òc, un còp
 securityNVisits=Òc, %S còps
