Updated Occitan translation

--- a/toolkit/chrome/cookie/cookieAcceptDialog.properties
+++ b/toolkit/chrome/cookie/cookieAcceptDialog.properties
@@ -2,6 +2,7 @@ hostColon=Òste :
 domainColon=Domeni :
 forSecureOnly=Connexions chifradas solament
 forAnyConnection=Tota mena de connexion
+atEndOfSession=a la fin de la sesilha
 showDetails=Visualizar los detalhs
 hideDetails=Amagar los detalhs
 detailsAccessKey=t
