--- a/browser/updater/updater.ini
+++ b/browser/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Mesa a jorn del logicial
-Info=Firefox es a installar vòstras mesas a jorn e aviarà dins un momenton…
+TitleText=Mesa a jorn de %MOZ_APP_DISPLAYNAME%
+InfoText=%MOZ_APP_DISPLAYNAME% es a installar vòstras mesas a jorn e aviarà dins un momenton…
