Updated Occitan translation

--- a/security/manager/chrome/pipnss/pipnss.properties
+++ b/security/manager/chrome/pipnss/pipnss.properties
@@ -318,3 +318,16 @@ CertOrgUnknown=(Desconegut)
 CertNotStored=(pas estocat)
 CertExceptionPermanent=Permanent
 CertExceptionTemporary=Temporari
+
+AddModulePrompt=Sètz segur que volètz installar aqueste modul de seguretat?
+AddModuleName=Nom del modul : %S
+AddModulePath=Camin : %S
+AddModuleSuccess=Un modèl de seguretat novèl es estat installat
+AddModuleFailure=Impossible d'apondre lo modul
+AddModuleDup=Aqueste modul de seguretat existís ja
+DelModuleBadName=Nom de modul invalid.
+DelModuleWarning=Sètz segur que volètz suprimir aqueste modul de seguretat?
+DelModuleError=Impossible de suprimir lo modul
+DelModuleIntSuccess=Modul de seguretat intèrna suprimit amb succès
+DelModuleExtSuccess=Modul de seguretat extèrna suprimit amb succès
+
