Updated Occitan translation
--HG--
extra : rebase_source : ab3ae37e31bcaa7576587d4cbb84f60e83f99d61

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -133,10 +133,16 @@ privateBrowsingMessageHeader=Volètz aviar la navigacion privada ?
 editBookmark.removeBookmarks.label=Suprimir lo marcapaginas;Suprimir los #1 marcapaginas
 
 # Geolocation UI
-geolocation.tellThem=Lor dire
-geolocation.tellThemKey=o
-geolocation.dontTellThem=Lor dire pas
-geolocation.dontTellThemKey=p
+
+geolocation.shareLocation=Partejar l'emplaçament
+geolocation.shareLocation.accesskey=a
+geolocation.dontShareLocation=Partejar pas l'emplaçament
+geolocation.dontShareLocation.accesskey=p
+
+geolocation.learnMore=Ne saupre mai…
+geolocation.remember=Memorizar per aqueste sit
+
+
 geolocation.siteWantsToKnow=%S vòl conéisser ont sètz.
 
 menuRestoreAllWindows.label=Restaurar totas las fenèstras
