Occitan: udpate for Aurora 17
Good stae just late landing plugin changes

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -120,12 +120,22 @@ carbonFailurePluginsMessage.message=Aquesta pagina demanda d'utilizar un plugin 
 carbonFailurePluginsMessage.restartButton.label=Reaviar en mòde 32 bits
 carbonFailurePluginsMessage.restartButton.accesskey=R
 activatePluginsMessage.message=Volètz activar los plugins sus aquesta pagina ?
-activatePluginsMessage.label=Activar los plugins
+activatePluginsMessage.label=Activate All Plugins
 activatePluginsMessage.accesskey=A
 activatePluginsMessage.always=Activar totjorn los plugins per aqueste site
 activatePluginsMessage.always.accesskey=c
 activatePluginsMessage.never=Activar pas jamai los plugins per aqueste site
 activatePluginsMessage.never.accesskey=N
+activateSinglePlugin=Activar
+PluginClickToPlay=Click here to activate the %S plugin.
+# LOCALIZATION NOTE - "vulnerable" indicates there is a security bug in the
+# plugin that is being exploited by attackers.
+PluginVulnerableUpdatable=This plugin is vulnerable and should be updated.
+PluginVulnerableNoUpdate=This plugin has security vulnerabilities.
+vulnerableUpdatablePluginWarning=Outdated Version!
+vulnerableNoUpdatePluginWarning=Vulnerable Plugin!
+vulnerablePluginsMessage=Some plugins have been deactivated for your safety.
+pluginInfo.unknownPlugin=Desconegut
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
