Occitan: update to 100% for Aurora 18

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -48,8 +48,6 @@ addonsInstalled=#1 es estat installat amb succès.;#2 moduls complementaris son 
 addonsInstalledNeedsRestart=#1 serà installat aprèp la reaviada de #3.;#2 moduls complementaris seràn installats aprèp la reaviada de #3.
 addonInstallRestartButton=Reaviar ara
 addonInstallRestartButton.accesskey=R
-addonInstallManage=Dobrir lo gestionari de moduls complementaris
-addonInstallManage.accesskey=O
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
 # #1 is the add-on name, #2 is the host name, #3 is the application name
@@ -120,21 +118,21 @@ carbonFailurePluginsMessage.message=Aquesta pagina demanda d'utilizar un plugin 
 carbonFailurePluginsMessage.restartButton.label=Reaviar en mòde 32 bits
 carbonFailurePluginsMessage.restartButton.accesskey=R
 activatePluginsMessage.message=Volètz activar los plugins sus aquesta pagina ?
-activatePluginsMessage.label=Activate All Plugins
+activateAllPluginsMessage.label=Activar totes los plugins
 activatePluginsMessage.accesskey=A
 activatePluginsMessage.always=Activar totjorn los plugins per aqueste site
 activatePluginsMessage.always.accesskey=c
 activatePluginsMessage.never=Activar pas jamai los plugins per aqueste site
 activatePluginsMessage.never.accesskey=N
 activateSinglePlugin=Activar
-PluginClickToPlay=Click here to activate the %S plugin.
+PluginClickToPlay=Clicatz aicí per activar lo plugin %S.
 # LOCALIZATION NOTE - "vulnerable" indicates there is a security bug in the
 # plugin that is being exploited by attackers.
-PluginVulnerableUpdatable=This plugin is vulnerable and should be updated.
-PluginVulnerableNoUpdate=This plugin has security vulnerabilities.
-vulnerableUpdatablePluginWarning=Outdated Version!
-vulnerableNoUpdatePluginWarning=Vulnerable Plugin!
-vulnerablePluginsMessage=Some plugins have been deactivated for your safety.
+PluginVulnerableUpdatable=Aqueste plugin es vulnerable e deu èsser mes a jorn.
+PluginVulnerableNoUpdate=Aqueste plugin possedís de falhas de seguretat.
+vulnerableUpdatablePluginWarning=Version obsoleta !
+vulnerableNoUpdatePluginWarning=Plugin vulnerable !
+vulnerablePluginsMessage=D'unes plugins son estats desactivats per vòstra seguretat.
 pluginInfo.unknownPlugin=Desconegut
 
 # Sanitize
@@ -350,6 +348,16 @@ syncPromoNotification.bookmarks.description=Podètz accedir a vòstres marcapagi
 # The final space separates this text from the Learn More link.
 syncPromoNotification.passwords.description=Podètz accedir a vòstres senhals sus totes vòstres aparelhs gràcias a %S. 
 syncPromoNotification.learnMoreLinkText=Ne saber mai…
+# LOCALIZATION NOTE (syncPromoNotification.addons.label): This appears in
+# the add-on install complete panel when Sync isn't set.
+# %S will be replaced by syncBrandShortName.
+# The final space separates this text from the Learn More link.
+syncPromoNotification.addons.description=Podètz accedir a vòstres moduls complemntaris sus totes vòstres aparelhs gràcias a %S. 
+# LOCALIZATION NOTE (syncPromoNotification.addons-sync-disabled.label):
+# This appears in the add-on install complete panel when Sync is set
+# but addons sync is not. %S will be replaced by syncBrandShortName.
+# The final space separates this text from the Learn More link.
+syncPromoNotification.addons-sync-disabled.description=Podètz utilizar vòstre compte %S per sincronizar vòstres moduls complementaris amb d'aparelhs multiples. 
 
 # Telemetry prompt
 # LOCALIZATION NOTE (telemetryOptInPrompt): %1$S will be replaced by
@@ -368,9 +376,6 @@ webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
 webapps.requestInstall = Volètz installar « %1$S » a partir del site (%2$S) ?
 webapps.install.success = Aplicacion installada
-# LOCALIZATION NOTE (webapps.uninstall.notification): %S will be replaced with the name of the uninstalled web app
-webapps.uninstall.notification = « %S » es estat desinstallat de vòstre ordenador.
-webapps.uninstall.label = Desinstallar l'aplicacion
 
 # Telemetry opt-out prompt for Aurora and Nightly
 # LOCALIZATION NOTE (telemetryOptOutPrompt): %1$S and %3$S will be replaced by
@@ -401,17 +406,32 @@ social.error.closeSidebar.accesskey=T
 # Identity notifications popups
 identity.termsOfService = Condicions d'utilizacion
 identity.privacyPolicy = Politica de confidencialitat
+# LOCALIZATION NOTE (identity.chooseIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.chooseIdentity.description = S'identificar sus %S
 identity.chooseIdentity.label = Utilizar una adreça electronica existenta
 identity.newIdentity.label = Utilizar una adreça electronica diferenta
 identity.newIdentity.accessKey = U
 identity.newIdentity.email.placeholder = Corrièr electronic
-# LOCALIZATION NOTE (identity.newIdentity.description, identity.chooseIdentity.description): %S is the website origin (ie. https://www.mozilla.org) shown in popup notifications.
+# LOCALIZATION NOTE (identity.newIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.newIdentity.description = Picatz vòstra adreça de corrièr electronic per vos enregistrar dins %S
 identity.next.label = Seguent
 identity.next.accessKey = n
 # LOCALIZATION NOTE: shown in the popup notification when a user successfully logs into a website
-# LOCALIZATION NOTE (identity.loggedIn.description): %S is the website origin (ie. https://www.mozilla.org)
+# LOCALIZATION NOTE (identity.loggedIn.description): %S is the user's identity (e.g. user@example.com)
 identity.loggedIn.description = Identificat en tant que : %S
 identity.loggedIn.signOut.label = Se desconnectar
 identity.loggedIn.signOut.accessKey = O
+
+# LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message, getUserMedia.shareCameraAndMicrophone.message): %S is the website origin (e.g. www.mozilla.org)
+# LOCALIZATION NOTE (getUserMedia.shareMicrophone.message, getUserMedia.shareSpecificMicrophone.label): %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.shareCamera.message = Volètz partejar vòstra webcam amb %S ?
+getUserMedia.shareCamera.label = Partejar la webcam
+getUserMedia.shareCamera.accesskey = P
+getUserMedia.shareSpecificCamera.label = Partejar la webcam : %S
+getUserMedia.shareMicrophone.message = Volètz partejar vòstre microfòn amb %S ?
+getUserMedia.shareMicrophone.label = Partejar lo microfòn
+getUserMedia.shareMicrophone.accesskey = P
+getUserMedia.shareSpecificMicrophone.label = Partejar lo microfòn : %S
+getUserMedia.shareCameraAndMicrophone.message = Volètz partejar vòstra webcam e vòstre microfòn amb %S ?
+getUserMedia.shareCameraAndMicrophone.label = Partejar la webcam e lo microfòn
+getUserMedia.shareCameraAndMicrophone.accesskey = P
