--- a/browser/pdfviewer/viewer.properties
+++ b/browser/pdfviewer/viewer.properties
@@ -1,3 +1,7 @@
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
 # Main toolbar buttons (tooltips and alt text for images)
 previous.title=Pagina precedenta
 previous_label=Precedent
@@ -18,6 +22,8 @@ zoom_in_label=Zoom avant
 zoom.title=Zoom
 print.title=Estampar
 print_label=Estampar
+presentation_mode.title=Bascuolar en mòde presentacion
+presentation_mode_label=Mòde Presentacion
 open_file.title=Dobrir lo fichièr
 open_file_label=Dobrir
 download.title=Telecargar
@@ -47,6 +53,10 @@ thumb_page_title=Pagina {{page}}
 # LOCALIZATION NOTE (thumb_page_canvas): "{{page}}" will be replaced by the page
 # number.
 thumb_page_canvas=Vinheta de la pagina {{page}}
+
+# Context menu
+page_rotate_cw.label=Rotacion orària
+page_rotate_ccw.label=Rotacion antiorària
 
 # Search panel button title and messages
 search=Recercar
