--- a/dom/chrome/security/csp.properties
+++ b/dom/chrome/security/csp.properties
@@ -45,6 +45,8 @@ failedToParseUnrecognizedSource = Impossible d'analisar la font pas reconeguda %
 # LOCALIZATION NOTE (reportPostRedirect):
 # %1$S is the specified report URI before redirect
 reportPostRedirect = Lo mandadís del rapòrt de violacion a %1$S a fracassat, perque una redireccion s'es producha
+# LOCALIZATION NOTE (allowDirectiveDeprecated):
+allowDirectiveDeprecated = La directiva « allow » es obsoleta, utilizatz la directiva equivalenta « default-source » a la plaça
 
 # CSP Errors:
 policyURINotAlone = La directiva « policy-uri » pòt solament aparéisser sola
@@ -104,3 +106,6 @@ intersectingSourceWithUndefinedHost = Crosament de la font amb l'òste pas defin
 # %1$S is the first source
 # %2$S is the second source
 intersectingSourcesWithUndefinedHosts = Crosament de doas fonts amb d'òstes pas definits : %1$S e %2$S
+# LOCALIZATION NOTE (duplicateDirective):
+# %1$S is the name of the duplicate directive
+duplicateDirective = Doblon de la directiva %1$S detectat. Totas las instàncias, levat la primièra, seràn ignoradas.
