--- a/mobile/android/chrome/aboutDownloads.properties
+++ b/mobile/android/chrome/aboutDownloads.properties
@@ -4,6 +4,13 @@
 
 downloadAction.open=Dobrir
 downloadAction.remove=Suprimir
+downloadAction.deleteAll=Suprimir tot
+
+# LOCALIZATION NOTE (downloadMessage.deleteAll):
+# Semi-colon list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+downloadMessage.deleteAll=Suprimir aqueste telecargament ?;Suprimir #1 telecargaments ?
+
 downloadAction.pause=Pausa
 downloadAction.resume=Tornar prene
 downloadAction.cancel=Anullar
