--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -55,6 +55,9 @@ popupButtonAllowOnce=Afichar
 popupButtonAlwaysAllow2=Afichar totjorn
 popupButtonNeverWarn2=Pas jamai
 
+# SafeBrowsing
+safeBrowsingDoorhanger=Aqueste site es estat identificat coma contenent de logicials malvolents o una temptativa de phishing. Siatz prudents.
+
 # LOCALIZATION NOTE (blockPopups.label): Label that will be used in
 # site settings dialog.
 blockPopups.label=Blocar los popups
@@ -218,6 +221,7 @@ contextmenu.copyPhoneNumber=Copiar lo numèro de telefòn
 contextmenu.sharePhoneNumber=Partejar lo numèro de telefòn
 contextmenu.changeInputMethod=Seleccionar lo metòde de picada
 contextmenu.fullScreen=Ecran complet
+contextmenu.copyImageLocation=Copiar l'adreça de l'imatge
 contextmenu.shareImage=Enregistrar l'imatge
 contextmenu.saveImage=Enregistrar l'imatge
 contextmenu.addSearchEngine=Apondre un motor de recèrca
@@ -230,6 +234,17 @@ contextmenu.paste=Empegar
 
 # Select UI
 selectHelper.closeMultipleSelectDialog=Acabat
+
+#Input widgets UI
+inputWidgetHelper.date=Causir una data
+inputWidgetHelper.datetime=Causir una data e un orari
+inputWidgetHelper.datetime-local=Causir una data e un orari
+inputWidgetHelper.time=Causir un orari
+inputWidgetHelper.week=Causir una setmana
+inputWidgetHelper.month=Causir un mes
+inputWidgetHelper.cancel=Anullar
+inputWidgetHelper.set=Definir
+inputWidgetHelper.clear=Escafar
 
 # Web Console API
 stacktrace.anonymousFunction=<anonim>
@@ -285,3 +300,5 @@ helperapps.ignore=Ignorar
 helperapps.dontAskAgain=Demandar pas mai per aqueste site
 helperapps.openWithApp2=Dobrir amb l'aplicacion %S
 helperapps.openWithList2=Dobrir amb una aplicacion
+helperapps.always=Totjorn
+helperapps.never=Pas jamai
