--- a/security/manager/chrome/pipnss/pipnss.properties
+++ b/security/manager/chrome/pipnss/pipnss.properties
@@ -319,6 +319,7 @@ certErrorTrust_Untrusted=Lo certificat proven pas d'una font segura.
 certErrorMismatch=Lo certificat es pas valid pel nom %S.
 # LOCALIZATION NOTE (certErrorMismatchSingle2): Do not translate <a id="cert_domain_link" title="%1$S">%1$S</a>
 certErrorMismatchSingle2=Lo certificat es pas valid que per <a id="cert_domain_link" title="%1$S">%1$S</a>.
+certErrorMismatchSinglePlain=Lo certificat es pas valid que per %S
 certErrorMismatchMultiple=Lo certificat es pas valid que pels noms seguents :
 certErrorMismatchNoNames=Lo certificat es pas valid per cap de nom de servidor.
 
