--- a/services/sync/sync.properties
+++ b/services/sync/sync.properties
@@ -11,7 +11,7 @@ lastSync2.label = Darrièra sincronizacion : %S
 mobile.label = Macapaginas del telefòn
 
 remote.pending.label = Los onglets distants son en cors de sincronizacion…
-remote.missing.label = Sincronizar vòstres autres ordenadors tornarmai per accedir a lors onglets
+remote.missing2.label = Sincronizar vòstres autres aparelhs tornarmai per accedir a lors onglets
 remote.opened.label = Totes los onglets distants son ja dobèrts
 remote.notification.label = Los onglets recents del burèu seràn disponibles aprèp lor sincronizacion
 
