--- a/toolkit/chrome/global/languageNames.properties
+++ b/toolkit/chrome/global/languageNames.properties
@@ -31,11 +31,13 @@ ch = Chamorro
 co = Còrse
 cr = Cree
 cs = Chèc
+csb = Cachob
 cu = Eslau vièlh
 cv = Chuvash
 cy = Gallés
 da = Danés
 de = Alemand
+dsb = Bas Sorab
 dv = Divehi
 dz = Dzongkha
 ee = Ewe
@@ -60,8 +62,10 @@ gn = Guarani
 gu = Gujarati
 gv = Manx
 ha = Hausa
+haw = Hawaïan
 he = Ebrieu
 hi = Indi
+hil = Hiligaïnon
 ho = Hiri Motu
 hr = Croat
 hsb = Sorab naut
