--- a/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -1,3 +1,7 @@
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
 #LOCALIZATION NOTE (aboutWindowTitle) %S is the addon name
 aboutWindowTitle=A prepaus de %S
 aboutWindowCloseButton=Tampar
@@ -26,6 +30,12 @@ notification.softblocked.link=Mai de detalhs
 #LOCALIZATION NOTE (notification.outdated) %1$S is the add-on name
 notification.outdated=Una mesa a jorn importanta es disponibla per %1$S.
 notification.outdated.link=Metre a jorn ara
+#LOCALIZATION NOTE (notification.vulnerableUpdatable) %1$S is the add-on name
+notification.vulnerableUpdatable=%1$S es conegut per èsser vulnerable e deu èsser mes a jorn.
+notification.vulnerableUpdatable.link=Metre a jorn ara
+#LOCALIZATION NOTE (notification.vulnerableNoUpdate) %1$S is the add-on name
+notification.vulnerableNoUpdate=%1$S es conegut per èsser vulnerable. Fasètz atencion.
+notification.vulnerableNoUpdate.link=Mai d'informacions
 #LOCALIZATION NOTE (notification.enable) %1$S is the add-on name, %2$S is brand name
 notification.enable=%1$S serà activat aprèp la reaviada de %2$S.
 #LOCALIZATION NOTE (notification.disable) %1$S is the add-on name, %2$S is brand name
@@ -69,6 +79,12 @@ details.notification.softblocked.link=Mai d'informacions
 #LOCALIZATION NOTE (details.notification.outdated) %1$S is the add-on name
 details.notification.outdated=Una mesa a jorn importanta es disponibla per %1$S.
 details.notification.outdated.link=Metre a jorn ara
+#LOCALIZATION NOTE (details.notification.vulnerableUpdatable) %1$S is the add-on name
+details.notification.vulnerableUpdatable=%1$S es conegut per èsser vulnerable e deu èsser mes a jorn.
+details.notification.vulnerableUpdatable.link=Metre a jorn ara
+#LOCALIZATION NOTE (details.notification.vulnerableNoUpdate) %1$S is the add-on name
+details.notification.vulnerableNoUpdate=%1$S es conegut per èsser vulnerable. Fasètz atencion.
+details.notification.vulnerableNoUpdate.link=Mai d'informacion
 #LOCALIZATION NOTE (details.notification.enable) %1$S is the add-on name, %2$S is brand name
 details.notification.enable=%1$S serà activat aprèp la reaviada de %2$S.
 #LOCALIZATION NOTE (details.notification.disable) %1$S is the add-on name, %2$S is brand name
