--- a/browser/chrome/browser/devtools/scratchpad.properties
+++ b/browser/chrome/browser/devtools/scratchpad.properties
@@ -26,6 +26,10 @@ export.fileOverwriteConfirmation=Lo fichièr existís. Lo remplaçar ?
 # type.
 browserWindow.unavailable=Blòtnòtas tròba pas cap de fenèstra de navigador activa dins la quala executar lo còde.
 
+# LOCALIZATION NOTE  (scratchpadContext.invalid): This error message is shown
+# when user tries to run an operation in Scratchpad in an unsupported context.
+scratchpadContext.invalid=La lausa JavaScript pòt pas executar aquesta operacion dins lo mòde actual.
+
 # LOCALIZATION NOTE  (openFile.title): This is the file picker title, when you
 # open a file from Scratchpad.
 openFile.title=Dobrir un fichièr
@@ -53,6 +57,14 @@ confirmClose=Volètz salvar los cambiaments efectuats dins aquesta lausa ?
 # LOCALIZATION NOTE  (confirmClose.title): This is title of the prompt dialog when
 # you try to close a scratchpad with unsaved changes.
 confirmClose.title=Modificacions pas enregistradas
+
+# LOCALIZATION NOTE  (confirmRevert): This is message in the prompt dialog when
+# you try to revert unsaved content of scratchpad.
+confirmRevert=Volètz tornar al darrièr enregistrament d'aquesta lausa ?
+
+# LOCALIZATION NOTE  (confirmRevert.title): This is title of the prompt dialog when
+# you try to revert unsaved content of scratchpad.
+confirmRevert.title=Tornar al darrièr enregistrament 
 
 # LOCALIZATION NOTE  (scratchpadIntro): This is a multi-line comment explaining
 # how to use the Scratchpad. Note that this should be a valid JavaScript
