--- a/browser/chrome/browser/syncSetup.properties
+++ b/browser/chrome/browser/syncSetup.properties
@@ -32,15 +32,18 @@ historyDaysCount.label      = #1 jorn d'istoric; #1 jorns d'istoric
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of passwords (was %S for a short while, use #1 instead, even if both work)
 passwordsCount.label        = #1 senhal;#1 senhals
+# LOCALIZATION NOTE (addonsCount.label):
+# #1 is the number of add-ons, see the link above for forms
+addonsCount.label        = #1 modul complementari;#1 moduls complementaris
 
 save.recoverykey.title = Enregistrar la clau de recuperacion
 save.recoverykey.defaultfilename = Clau de recuperacion de Firefox.html
 
 newAccount.action.label = Ara, Firefox Sync es configurat per sincronizar automaticament totas las donadas de vòstre navigador.
 newAccount.change.label = Podètz causir precisament çò que serà sincronizat en seleccionant Opcions de sincronizacion çaijós.
-resetClient.change.label = Ara, Firefox Sync va fusionar totas las donadas d'aqueste ordenador amb vòstre compte Sync.
-wipeClient.change.label = Ara, Firefox Sync va remplaçar totas las donadas del navigador d'aqueste ordenador amb las donadas de vòstre compte Sync.
-wipeRemote.change.label = Ara, Firefox Sync va remplaçar totas las donadas de navigacion de vòstre compte Sync amb las donadas d'aqueste ordenador.
+resetClient.change2.label = Ara, Firefox Sync va fusionar totas las donadas d'aqueste aparelh amb vòstre compte Sync.
+wipeClient.change2.label = Ara, Firefox Sync va remplaçar totas las donadas del navigador d'aqueste aparelh amb las donadas de vòstre compte Sync.
+wipeRemote.change2.label = Ara, Firefox Sync va remplaçar totas las donadas de navigacion de vòstre compte Sync amb las donadas d'aqueste aparelh.
 existingAccount.change.label = Aquesta causida pòt èsser modificada en seleccionant Opcions de sincronizacion çaijós.
 
 # Several other strings are used (via Weave.Status.login), but they come from
