--- a/toolkit/chrome/global/aboutSupport.properties
+++ b/toolkit/chrome/global/aboutSupport.properties
@@ -12,6 +12,14 @@
 # "GPU Accelerated Windows: 0/2"
 acceleratedWindows = Fenèstras amb acceleracion grafica
 
+# LOCALIZATION NOTE (rawDataCopied) Text displayed in a mobile "Toast" to user when the
+# raw data is successfully copied to the clipboard via button press.
+rawDataCopied=Informacions brutas copiadas dins lo quichapapièrs
+
+# LOCALIZATION NOTE (textCopied) Text displayed in a mobile "Toast" to user when the
+# text is successfully copied to the clipboard via button press.
+textCopied=Tèxte copiat dins lo quichapapièrs
+
 # LOCALIZATION NOTE The verb "blocked" here refers to a graphics feature such as "Direct2D" or "OpenGL layers".
 blockedDriver = Blocat per la version de vòstre pilòt grafic.
 
