Occitan: minor updates. Aurora 18 is 100%

--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -849,16 +849,16 @@ jsbJslintHappyDesc=Forçar lo mòde « jslint-stricter » ?
 # on what it does.
 jsbJslintHappyManual=Passar lo paramètre a « true » fòrça l'utilizacion del mòde « jslint-stricter »
 
-# LOCALIZATION NOTE (jsbBraceStyleDesc) A very short description of the
+# LOCALIZATION NOTE (jsbBraceStyleDesc2) A very short description of the
 # 'jsb <braceStyle>' parameter. This string is designed to be shown
 # in a menu alongside the command name, which is why it should be as short as
 # possible.
-jsbBraceStyleDesc=Causir lo mòde d'afichatge de las acoladas
+jsbBraceStyleDesc2=Collapse, expand, end-expand, expand-strict
 
-# LOCALIZATION NOTE (jsbBraceStyleManual) A fuller description of the
+# LOCALIZATION NOTE (jsbBraceStyleManual2) A fuller description of the
 # 'jsb <braceStyle>' parameter, displayed when the user asks for help
 # on what it does.
-jsbBraceStyleManual=<p class="nowrap">Mòde d'afichatge de las acoladas. Causir demest los diferents mòdes :</p><ul><li>collapse<br/><pre>if (x == 1) {\n  ...\n} else {\n  ...\n}</pre></li><li>expand<br/><pre>if (x == 1)\n{\n  ...\n}\nelse\n{\n  ...\n}</pre></li><li>end-expand<br/><pre>if (x == 1) {\n  ...\n}\nelse {\n  ...\n}</pre></li><li>expand-strict<br/><pre>if (x == 1)\n{\n  return // Aqueste mòde pòt pausar de problèmas amb certans escripts\n  {\n    a: 1\n  };\n} else {\n  ...\n}</pre></li></ul>
+jsbBraceStyleManual2=Estil de las acoladas. Causissètz entre : « collapse », « expand », « end-expand » e « expand-strict ».
 
 # LOCALIZATION NOTE (jsbNoSpaceBeforeConditionalDesc) A very short description
 # of the 'jsb <noSpaceBeforeConditional>' parameter. This string is designed to
