--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -394,6 +394,14 @@ social.toggle.accesskey=f
 # LOCALIZATION NOTE (social.activated.description): %1$S is the name of the social provider, %2$S is brandShortName (e.g. Firefox)
 social.activated.description=Avètz activat %1$S per %2$S.
 
+# LOCALIZATION NOTE (social.remove.label): %S = brandShortName
+social.remove.label=Suprimir de %S
+social.remove.accesskey=S
+# LOCALIZATION NOTE (social.remove.confirmationLabel): %1$S is the name of the social provider, %2$S is brandShortName (e.g. Firefox)
+social.remove.confirmationLabel=Sètz segur que volètz suprimir %1$S de %2$S ?
+# LOCALIZATION NOTE (social.remove.confirmationOK): %S is the name of the social provider
+social.remove.confirmationOK=Suprimir %S
+
 # LOCALIZATION NOTE (social.error.message): %1$S is brandShortName (e.g. Firefox), %2$S is the name of the social provider
 social.error.message=%1$S se pòt pas connectar actualament amb %2$S.
 social.error.tryAgain.label=Ensajatz tornarmai
