Occitan: pull from Pootle for Aurora 19

--- a/browser/installer/nsisstrings.properties
+++ b/browser/installer/nsisstrings.properties
@@ -49,6 +49,7 @@ SPACE_REQUIRED=Espaci de disc requesit :
 SPACE_AVAILABLE=Espaci de disc disponible : 
 ONE_MOMENT=Un moment, $BrandShortName s'aviarà tre que l'installacion serà acabada…
 INSTALL_MAINT_SERVICE=I&nstallar lo servici de mesa a jorn en rèire plan de $BrandShortName
+SEND_PING=M&andar informacion sus aquela installacion a Mozilla
 BROWSE_BUTTON=Pe&rcórrer...
 DEST_FOLDER=Dorsièr de destinacion
 
