--- a/dom/chrome/charsetTitles.properties
+++ b/dom/chrome/charsetTitles.properties
@@ -25,7 +25,7 @@ windows-1250.title  = Euròpa centrala (Windows-1250)
 windows-1252.title  = Occidental (Windows-1252)
 windows-1254.title  = Turc (Windows-1254)
 windows-1257.title  = Balt (Windows-1257)
-x-mac-roman.title       = Occidental (MacRoman)
+macintosh.title         = Occidental (MacRoman)
 x-mac-ce.title          = Euròpa centrala (MacCE)
 x-mac-turkish.title     = Turc (MacTurkish)
 x-mac-croatian.title    = Croat (MacCroatian)
@@ -43,7 +43,6 @@ gbk.title = Chinés simplificat (GBK)
 iso-2022-cn.title = Chinés simplificat (ISO-2022-CN)
 euc-kr.title = Corean (EUC-KR)
 x-johab.title = Corean (JOHAB)
-x-windows-949.title = Corean (UHC)
 iso-2022-kr.title = Corean (ISO-2022-KR)
 utf-7.title = Unicode (UTF-7)
 utf-8.title = Unicode (UTF-8)
@@ -84,8 +83,6 @@ ibm852.title = Europèu central (IBM-852)
 ibm855.title = Cirillic (IBM-855)
 ibm857.title = Turc (IBM-857)
 ibm862.title = Ebrieu (IBM-862)
-ibm864.title = Arabi (IBM-864)
-ibm864i.title = Arabi (IBM-864-I)
 gb18030.title = Chinés Simplificat (GB18030)
 x-mac-arabic.title = Arabi (MacArabic)
 x-iso-8859-6-8-x.title = Arabi (Langbox ISO-8859-6.8x)
