--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -57,27 +57,7 @@ CreateAttributeWarning=L'utilizacion de document.createAttribute() es obsolèta.
 CreateAttributeNSWarning=L'utilizacion de document.createAttributeNS() es obsolèta. Utilizatz element.setAttributeNS() a la plaça.
 SpecifiedWarning=L'utilizacion de l'atribut « specified » es obsolèta. Aquò renvia totjorn « true ».
 OwnerElementWarning=L'utilizacion de l'atribut « ownerElement » d'un atribut es obsolèta.
-NodeNameWarning=L'utilizacion de l'atribut « nodeName » d'un atribut es obsolèta. Utilizatz « name » a la plaça.
 NodeValueWarning=L'utilizacion de l'atribut « nodeValue » d'un atribut es obsolèta. Utilizatz « value » a la plaça.
-NodeTypeWarning=L'utilizacion de l'atribut « nodeType » d'un atribut es obsolèta. Aquò renvia totjorn 2.
-ParentNodeWarning=L'utilizacion de l'atribut « parentNode » d'un atribut es obsolèta. Aquò renvia totjorn « null ».
-ChildNodesWarning=L'utilizacion de l'atribut « childNodes » d'un atribut es obsolèta. Aquò renvia totjorn « null ».
-HasChildNodesWarning=L'utilizacion « hasChildNodes() » sus un atribut es obsolèta. Aquò renvia totjorn « false ».
-HasAttributesWarning=L'utilizacion de « hasAttributes() » sus un atribut es obsolèta. Aquò renvia totjorn « false ».
-FirstChildWarning=L'utilizacion de l'atribut « firstChild » d'un atribut es obsolèta. Utilizatz « value » a la plaça.
-LastChildWarning=L'utilizacion de l'atribut « lastChild » d'un atribut es obsolèta. Utilizatz « value » a la plaça.
-PreviousSiblingWarning=L'utilizacion de l'atribut « previousSibling » d'un atribut es obsolèta. Aquò renvia totjorn « null ».
-NextSiblingWarning=L'utilizacion de l'atribut « nextSibling » d'un atribut es obsolèta. Aquò renvia totjorn « null ».
-AttributesWarning=L'utilizacion de l'atribut « attributes » d'un atribut es obsolèta. Aquò renvia totjorn « null ».
-InsertBeforeWarning=L'utilizacion de « insertBefore() » sus un atribut es obsolèta. Utilizatz « value » a la plaça.
-ReplaceChildWarning=L'utilizacion de « replaceChild() » sus un atribut es obsolèta. Utilizatz « value » a la plaça.
-RemoveChildWarning=L'utilizacion de « removeChild() » sus un atribut es obsolèta. Utilizatz « value » a la plaça.
-AppendChildWarning=L'utilizacion de « appendChild() » sus un atribut es obsolèta. Utilizatz « value » a la plaça.
-CloneNodeWarning=L'utilizacion de « cloneNode() » sus un atribut es obsolèta.
-OwnerDocumentWarning=L'utilizacion de « ownerDocument » d'un atribut es obsolèta.
-NormalizeWarning=L'utilizacion dels atributs « normalize() » es obsolèta.
-IsSupportedWarning=L'utilizacion de « isSupported() » sus un atribut es obsolèta.
-IsEqualNodeWarning=L'utilizacion de « isEqualNode() » sus un atribut es obsolèta.
 TextContentWarning=L'utilizacion de l'atribut « textContent » d'un atribut es obsolèta. Utilizatz « value » a la plaça.
 EnablePrivilegeWarning=L'utilizacion de « enablePrivilege » es obsolèta. Utilizatz puslèu lo còde que s'executa al meteis nivèl que lo processus principal (per ex. una extension).
 PositionWarning=L'utilizacion de l'atribut « position » per d'eveniments de progression XMLHttpRequest es obsolèta.
@@ -92,7 +72,7 @@ FullScreenDeniedBlocked=La requèsta d'accès a l'ecran complet es estada refusa
 FullScreenDeniedDisabled=La requèsta d'accès a l'ecran complet es estada refusada perque l'API « full-screen » es desactivada dins las preferéncias utilizaire.
 FullScreenDeniedFocusedPlugin=La requèsta d'accès a l'ecran complet es estada refusada perque un plugin fenestrat es seleccionat.
 FullScreenDeniedHidden=La requèsta d'accès a l'ecran complet es estada refusada perque lo document es pas mai visible.
-FullScreenDeniedIframeDisallowed=La requèsta d'accès a l'ecran complet es estada refusada perque al mens un dels iframes contenguts dins lo document a pas l'atribut « mozallowfullscreen ».
+FullScreenDeniedIframeNotAllowed=La requèsta d'accès a l'ecran complet es estada refusada perque al mens un dels iframes contenguts dins lo document a pas l'atribut « mozallowfullscreen ».
 FullScreenDeniedNotInputDriven=La requèsta d'accès a l'ecran complet es estada refusada perque Element.mozRequestFullScreen() es pas estat apelada a l'interior d'un gestionari d'eveniment generat per l'utilizaire.
 FullScreenDeniedNotInDocument=La requèsta d'accès a l'ecran complet es estada refusada perque l'element a l'origina de la requèsta es pas mai dins son document.
 FullScreenDeniedMovedDocument=La requèsta d'accès a l'ecran complet es estada refusada perque l'element a l'origina de la requèsta a deplaçat lo document.
@@ -134,3 +114,5 @@ MutationEventWarning=L'utilizacion dels « Mutation Events » es obsolèta. Uti
 MozSliceWarning=L'utilizacion de mozSlice sus l'objècte Blob es obsolèta. Utilizatz slice a la plaça.
 # LOCALIZATION NOTE: Do not translate "Components"
 ComponentsWarning=L'objècte « Components » es obsolet. Serà lèu suprimit.
+# LOCALIZATION NOTE: Do not translate "mozHidden", "mozVisibilityState", "hidden", or "visibilityState"
+PrefixedVisibilityApiWarning='mozHidden' and 'mozVisibilityState' are deprecated.  Please use the unprefixed 'hidden' and 'visibilityState' instead.
