--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -13,9 +13,8 @@ alertAddonsInstalled=Installacion acabada. Reaviada necessària.
 alertAddonsInstalledNoRestart=Installacion acabada
 alertAddonsFail=Fracàs de l'installacion.
 
-alertDownloads=Telecargaments
-alertDownloadsStart=Telecargament de %S…
-alertDownloadsDone=%S a acabat lo telecargament
+alertDownloadsStart2=Telecargament aviat
+alertDownloadsDone2=Telecargaments acabats
 alertCantOpenDownload=Impossible de dobrir lo fichièr. Lo podètz enregistrar.
 alertDownloadsSize=Telecargament tròp voluminós
 alertDownloadsNoSpace=Espaci d'emmagazinatge insufisent
@@ -302,3 +301,13 @@ helperapps.openWithApp2=Dobrir amb l'aplicacion %S
 helperapps.openWithList2=Dobrir amb una aplicacion
 helperapps.always=Totjorn
 helperapps.never=Pas jamai
+
+#Lightweight themes
+# LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
+# the host name of the site.
+lwthemeInstallRequest.message=Aqueste siti (%S) a ensajat d'installar un tèma.
+lwthemeInstallRequest.allowButton=Autorizar
+
+lwthemePostInstallNotification.message=Un tèma novèl s'es installat.
+lwthemePostInstallNotification.undoButton=Anullar
+lwthemePostInstallNotification.manageButton=Gerir los tèmas…
