--- a/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -22,6 +22,7 @@ cannotPause=Aqueste telecargament pòt pas èsser interromput
 downloadErrorAlertTitle=Error de telecargament
 downloadErrorGeneric=Lo telecargament pòt pas èsser enregistrat perque una error desconeguda s'es producha.\n\nEnsajatz tornarmai.
 
+# LOCALIZATION NOTE: we don't have proper plural support in the CPP code; bug 463102
 quitCancelDownloadsAlertTitle=Anullar totes los telecargaments ?
 quitCancelDownloadsAlertMsg=Se quitatz ara, un telecargament en cors serà anullat. Volètz vertadièrament quitar ?
 quitCancelDownloadsAlertMsgMultiple=Se quitatz ara, %S telecargaments seràn anullats. Volètz vertadièrament quitar ?
@@ -36,6 +37,8 @@ enterPrivateBrowsingCancelDownloadsAlertMsgMultiple=Se dintratz ara dins lo mòd
 leavePrivateBrowsingCancelDownloadsAlertTitle=Anullar totes los telecargaments?
 leavePrivateBrowsingCancelDownloadsAlertMsg=Se sortissètz ara del mòde de navigacion privada, se va anullar 1 telecargament. Sètz segur que volètz sortir del mòde de navigacion privada ?
 leavePrivateBrowsingCancelDownloadsAlertMsgMultiple=Se sortissètz ara del mòde de navigacion privada, se van anullar %S telecargaments. Sètz segur que sortir dintrar del mòde de navigacion privada ?
+leavePrivateBrowsingWindowsCancelDownloadsAlertMsg=Se sortissètz ara del mòde de navigacion privada, se va anullar 1 telecargament. Sètz segur que volètz sortir del mòde de navigacion privada ?
+leavePrivateBrowsingWindowsCancelDownloadsAlertMsgMultiple=Se sortissètz ara del mòde de navigacion privada, se van anullar %S telecargaments. Sètz segur que sortir dintrar del mòde de navigacion privada ?
 cancelDownloadsOKText=Anullar lo telecargament
 cancelDownloadsOKTextMultiple=Anullar los %S telecargaments
 dontQuitButtonWin=Quitar pas
@@ -50,6 +53,12 @@ downloadsCompleteMsg=Totes los telecargaments son acabats
 # %1$S transfer progress; %2$S rate number; %3$S rate unit; %4$S time left
 # example: 4 minutes left — 1.1 of 11.1 GB (2.2 MB/sec)
 statusFormat3=%4$S — %1$S (%2$S %3$S/seg)
+
+# LOCALIZATION NOTE (statusFormatNoRate): — is the "em dash" (long dash)
+# %1$S transfer progress; %2$S time left
+# example: 4 minutes left — 1.1 of 11.1 GB
+statusFormatNoRate=%1$S — %2$S
+
 bytes=octets
 kilobyte=Ko
 megabyte=Mo
