--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -10,10 +10,10 @@ droponhomemsg=Volètz qu'aqueste document siá vòstra pagina d'acuèlh novèla 
 
 # context menu strings
 
-# LOCALIZATION NOTE (contextMenuSearchText): %1$S is the search engine,
+# LOCALIZATION NOTE (contextMenuSearch): %1$S is the search engine,
 # %2$S is the selection string.
-contextMenuSearchText=Recèrca %1$S per « %2$S »
-contextMenuSearchText.accesskey=R
+contextMenuSearch=Recèrca %1$S per « %2$S »
+contextMenuSearch.accesskey=S
 
 # bookmark dialog strings
 
@@ -370,6 +370,21 @@ telemetryYesButtonAccessKey = O
 telemetryNoButtonLabel = Non
 telemetryNoButtonAccessKey = N
 
+# Keyword.URL reset prompt
+# LOCALIZATION NOTE (keywordPrompt.message):
+#  - %1$S is brandShortName
+#  - %2$S is a host name (e.g. "somewebsearch.com") from the current value of keyword.URL
+#  - %3$S is the name of the default search engine (e.g. "Google")
+keywordPrompt.message = %1$S is using '%2$S' for searches from the location bar. Would you like to restore the default search (%3$S)?
+
+# LOCALIZATION NOTE (keywordPrompt.yesButton): %1$S is the name of the default search engine
+keywordPrompt.yesButton = Òc, utilizar %1$S
+keywordPrompt.yesButton.accessKey = O
+
+# LOCALIZATION NOTE (keywordPrompt.noButton): %1$S is a host name (e.g. "somewebsearch.com") from the current value of keyword.URL
+keywordPrompt.noButton = Non, contunhar d'utilizar '%1$S'
+keywordPrompt.noButton.accessKey  = N
+
 # Webapps notification popup
 webapps.install = Installar
 webapps.install.accesskey = I
@@ -387,10 +402,6 @@ fullscreen.entered=Ara, %S es afichat en mòde ecran complet.
 # LOCALIZATION NOTE (fullscreen.rememberDecision): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.rememberDecision=Se remembrar d'aquesta decision per %S
 
-# LOCALIZATION NOTE (social.toggle.label): %1$S is the name of the social provider, %2$S is brandShortName (e.g. Firefox)
-social.toggle.label=%1$S — %2$S
-social.toggle.accesskey=f
-
 # LOCALIZATION NOTE (social.activated.description): %1$S is the name of the social provider, %2$S is brandShortName (e.g. Firefox)
 social.activated.description=Avètz activat %1$S per %2$S.
 
@@ -401,6 +412,14 @@ social.remove.accesskey=S
 social.remove.confirmationLabel=Sètz segur que volètz suprimir %1$S de %2$S ?
 # LOCALIZATION NOTE (social.remove.confirmationOK): %S is the name of the social provider
 social.remove.confirmationOK=Suprimir %S
+
+
+# LOCALIZATION NOTE (social.turnOff.label): %S is the name of the social provider
+social.turnOff.label=Turn off %S
+social.turnOff.accesskey=T
+# LOCALIZATION NOTE (social.turnOn.label): %S is the name of the social provider
+social.turnOn.label=Turn on %S
+social.turnOn.accesskey=T
 
 # LOCALIZATION NOTE (social.error.message): %1$S is brandShortName (e.g. Firefox), %2$S is the name of the social provider
 social.error.message=%1$S se pòt pas connectar actualament amb %2$S.
@@ -443,3 +462,5 @@ getUserMedia.shareSpecificMicrophone.label = Partejar lo microfòn : %S
 getUserMedia.shareCameraAndMicrophone.message = Volètz partejar vòstra webcam e vòstre microfòn amb %S ?
 getUserMedia.shareCameraAndMicrophone.label = Partejar la webcam e lo microfòn
 getUserMedia.shareCameraAndMicrophone.accesskey = P
+getUserMedia.denyRequest.label = Partejar pas l'emplaçament
+getUserMedia.denyRequest.accesskey = D
