--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -19,6 +19,10 @@ confirmTabSwitch.buttonSwitch.accessKey=S
 confirmTabSwitch.buttonOpen=Dobrir malgrat tot
 confirmTabSwitch.buttonOpen.accessKey=O
 
+# LOCALIZATION NOTE (chromeDebuggerWindowTitle): The title displayed for the
+# chrome (browser) debugger window.
+chromeDebuggerWindowTitle=Desbugador del navigador
+
 # LOCALIZATION NOTE (remoteDebuggerWindowTitle): The title displayed for the
 # remote debugger window.
 remoteDebuggerWindowTitle=Desbugador distant
@@ -44,11 +48,11 @@ remoteDebuggerReconnectMessage=Servidor introbable. Tornar ensajar ? (òste:pòr
 remoteDebuggerConnectionFailedMessage=Impossible de trobar lo servidor en utilizant lo nom d'òste e lo numèro de pòrt provesits.
 
 # LOCALIZATION NOTE (collapsePanes): This is the tooltip for the button
-# that collapses the left and right panes in the debugger UI. -->
+# that collapses the left and right panes in the debugger UI.
 collapsePanes=Reduire los panèls
 
 # LOCALIZATION NOTE (expandPanes): This is the tooltip for the button
-# that expands the left and right panes in the debugger UI. -->
+# that expands the left and right panes in the debugger UI.
 expandPanes=Desvolopar los panèls
 
 # LOCALIZATION NOTE (pauseLabel): The label that is displayed on the pause
@@ -79,17 +83,38 @@ emptyStackText=Pas cap de pila d'afichar.
 # breakpoints list when there are no breakpoints to display.
 emptyBreakpointsText=Pas cap de punts d'arrèst d'afichar.
 
-# LOCALIZATION NOTE (noScriptsText): The text to display in the menulist when
-# there are no scripts.
+# LOCALIZATION NOTE (emptyGlobalsText): The text to display in the menulist
+# when there are no chrome globals available.
+noGlobalsText=No globals
+
+# LOCALIZATION NOTE (noMatchingScriptsText): The text to display in the
+# menulist when there are no matching chrome globals after filtering.
+noMatchingGlobalsText=No matching globals
+
+# LOCALIZATION NOTE (noScriptsText): The text to display in the menulist
+# when there are no scripts.
 noScriptsText=Pas cap d'escript.
 
 # LOCALIZATION NOTE (noMatchingScriptsText): The text to display in the
 # menulist when there are no matching scripts after filtering.
 noMatchingScriptsText=Pas cap d'escript correspondent
 
+# LOCALIZATION NOTE (noMatchingStringsText): The text to display in the
+# global search results when there are no matching strings after filtering.
+noMatchingStringsText=Cap de correspondéncia pas trobada
+
 # LOCALIZATION NOTE (emptyFilterText): This is the text that appears in the
-# filter text box when it is empty.
+# filter text box when it is empty and the scripts container is selected.
 emptyFilterText=Filtrar los escripts (%S)
+
+# LOCALIZATION NOTE (emptyChromeGlobalsFilterText): This is the text that
+# appears in the filter text box when it is empty and the chrome globals
+# container is selected.
+emptyChromeGlobalsFilterText=Filter chrome globals (%S)
+
+# LOCALIZATION NOTE (emptyVariablesFilterText): This is the text that
+# appears in the filter text box for the variables view container.
+emptyVariablesFilterText=Filter variables
 
 # LOCALIZATION NOTE (searchPanelGlobal): This is the text that appears in the
 # filter panel popup for the global search operation.
@@ -103,8 +128,13 @@ searchPanelToken=Recercar dins aqueste fichièr (%S)
 # filter panel popup for the line search operation.
 searchPanelLine=Anar a la linha (%S)
 
+# LOCALIZATION NOTE (searchPanelVariable): This is the text that appears in the
+# filter panel popup for the variables search operation.
+searchPanelVariable=Filter variables (%S)
+
 # LOCALIZATION NOTE (breakpointMenuItem): The text for all the elements that
 # are displayed in the breakpoints menu item popup.
+breakpointMenuItem.setConditional=Configure conditional breakpoint
 breakpointMenuItem.enableSelf=Activar lo punt d'arrèst
 breakpointMenuItem.disableSelf=Desactivar lo punt d'arrèst
 breakpointMenuItem.deleteSelf=Suprimir lo punt d'arrèst
@@ -116,15 +146,13 @@ breakpointMenuItem.disableAll=Desactivar totes los punts d'arrèst
 breakpointMenuItem.deleteAll=Suprimir totes los punts d'arrèst
 
 # LOCALIZATION NOTE (loadingText): The text that is displayed in the script
-# editor when the laoding process has started but there is no file to display
+# editor when the loading process has started but there is no file to display
 # yet.
 loadingText=Cargament...
 
-# LOCALIZATION NOTE (loadingError):
-# This is the error message that is displayed on failed attempts to load an
-# external resource file.
-# %1$S=URL, %2$S=status code
-loadingError=Error al moment del cargament de %1$S : %2$S
+# LOCALIZATION NOTE (emptyStackText): The text that is displayed in the watch
+# expressions list to add a new item.
+addWatchExpressionText=Add watch expression
 
 # LOCALIZATION NOTE (emptyVariablesText): The text that is displayed in the
 # variables pane when there are no variables to display.
@@ -135,7 +163,20 @@ emptyVariablesText=Pas cap de variabla d'afichar.
 # etc.).
 scopeLabel=Portada %S
 
+# LOCALIZATION NOTE (watchExpressionsScopeLabel): The name of the watch
+# expressions scope. This text is displayed in the variables pane as a header for
+# the watch expressions scope.
+watchExpressionsScopeLabel=Watch expressions
+
 # LOCALIZATION NOTE (globalScopeLabel): The name of the global scope. This text
 # is added to scopeLabel and displayed in the variables pane as a header for
 # the global scope.
 globalScopeLabel=globala
+
+# LOCALIZATION NOTE (variablesSeparatorLabel): The text that is displayed
+# in the variables list as a separator between the name and value.
+variablesSeparatorLabel=:
+
+# LOCALIZATION NOTE (watchExpressionsSeparatorLabel): The text that is displayed
+# in the watch expressions list as a separator between the code and evaluation.
+watchExpressionsSeparatorLabel= →
