--- a/browser/chrome/browser/devtools/gcli.properties
+++ b/browser/chrome/browser/devtools/gcli.properties
@@ -123,16 +123,15 @@ helpDesc=Obténer d'ajuda sus las comandas disponiblas
 helpManual=Provesís d'ajuda sus una comanda especifica (se una cadena de recercar es picada e qu'una correspondéncia exacta es trobada) o sus las comandas disponiblas (se cap de cadena de recercar es pas picada o se cap de correspondéncia exacta es pas trobada).
 
 # LOCALIZATION NOTE (helpSearchDesc): A very short description of the 'search'
-# parameter to the 'help' command. See helpSearchManual2 for a fuller
+# parameter to the 'help' command. See helpSearchManual3 for a fuller
 # description of what it does. This string is designed to be shown in a dialog
 # with restricted space, which is why it should be as short as possible.
 helpSearchDesc=Recrecar una cadena
 
-# LOCALIZATION NOTE (helpSearchManual2): A fuller description of the 'search'
+# LOCALIZATION NOTE (helpSearchManual3): A fuller description of the 'search'
 # parameter to the 'help' command. Displayed when the user asks for help on
-# what it does. Inline HTML (e.g. <strong>) can be used to emphasize the core
-# concept.
-helpSearchManual2=<strong>cadena de recèrca</strong> d'utilizar per reduire lo nombre de comandas afichadas. Las expressions regularas son pas geridas.
+# what it does.
+helpSearchManual3=<strong>cadena de recèrca</strong> d'utilizar per reduire lo nombre de comandas afichadas. Las expressions regularas son pas geridas.
 
 # LOCALIZATION NOTE (helpManSynopsis): A heading shown at the top of a help
 # page for a command in the console It labels a summary of the parameters to
