--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -104,13 +104,13 @@ screenshotFullPageDesc=Pagina Web entièra ? (true/false)
 # asks for help on what it does.
 screenshotFullPageManual=True se la captura deu tanben prene en compte las partidas de la pagina Web que son actualament en defòra de la zòna de desfilament visibla
 
-# LOCALIZATION NOTE (screenshotSelectorChromeConflict) Exception thwon when user
+# LOCALIZATION NOTE (screenshotSelectorChromeConflict) Exception thrown when user
 # tries to use 'selector' option along with 'chrome' option of the screenshot
 # command. Refer: https://bugzilla.mozilla.org/show_bug.cgi?id=659268#c7
 screenshotSelectorChromeConflict=L'opcion selector es pas presa en carga quand l'opcion chrome es a true
 
 # LOCALIZATION NOTE (screenshotGeneratedFilename) The auto generated filename
-# when no file name is provided. the first argument (%1$S) is the date string
+# when no file name is provided. The first argument (%1$S) is the date string
 # in yyyy-mm-dd format and the second argument (%2$S) is the time string
 # in HH.MM.SS format. Please don't add the extension here.
 screenshotGeneratedFilename=Captura d'ecran %1$S a %2$S
@@ -141,11 +141,11 @@ restartFirefoxDesc=Reaviar Firefox
 # displayed in a dialog when the user is using this command.
 restartFirefoxNocacheDesc=Desactiva lo cargament del contengut de la memòria en amagatal a la reaviada
 
-# LOCALIZATION NOTE (restartFirefoxRequestCancelled) A string dispalyed to the
+# LOCALIZATION NOTE (restartFirefoxRequestCancelled) A string displayed to the
 # user when a scheduled restart has been aborted by the user.
 restartFirefoxRequestCancelled=Demanda de reaviada anullada per l'utilizaire.
 
-# LOCALIZATION NOTE (restartFirefoxRestarting) A string dispalyed to the
+# LOCALIZATION NOTE (restartFirefoxRestarting) A string displayed to the
 # user when a restart has been initiated without a delay.
 restartFirefoxRestarting=Reaviada de Firefox...
 
@@ -849,16 +849,16 @@ jsbJslintHappyDesc=Forçar lo mòde « jslint-stricter » ?
 # on what it does.
 jsbJslintHappyManual=Passar lo paramètre a « true » fòrça l'utilizacion del mòde « jslint-stricter »
 
-# LOCALIZATION NOTE (jsbBraceStyleDesc2) A very short description of the
+# LOCALIZATION NOTE (jsbBraceStyleDesc) A very short description of the
 # 'jsb <braceStyle>' parameter. This string is designed to be shown
 # in a menu alongside the command name, which is why it should be as short as
 # possible.
-jsbBraceStyleDesc2=Collapse, expand, end-expand, expand-strict
+jsbBraceStyleDesc=Collapse, expand, end-expand, expand-strict
 
-# LOCALIZATION NOTE (jsbBraceStyleManual2) A fuller description of the
+# LOCALIZATION NOTE (jsbBraceStyleManual) A fuller description of the
 # 'jsb <braceStyle>' parameter, displayed when the user asks for help
 # on what it does.
-jsbBraceStyleManual2=Estil de las acoladas. Causissètz entre : « collapse », « expand », « end-expand » e « expand-strict ».
+jsbBraceStyleManual=Estil de las acoladas. Causissètz entre : « collapse », « expand », « end-expand » e « expand-strict ».
 
 # LOCALIZATION NOTE (jsbNoSpaceBeforeConditionalDesc) A very short description
 # of the 'jsb <noSpaceBeforeConditional>' parameter. This string is designed to
