--- a/browser/chrome/browser/devtools/scratchpad.properties
+++ b/browser/chrome/browser/devtools/scratchpad.properties
@@ -71,6 +71,11 @@ confirmRevert.title=Tornar al darrièr enregistrament
 # comment inside /* and */.
 scratchpadIntro1=/*\n * Aquò's una Lausa JavaScript.\n *\n * Picatz de còde JavaScript, puèi fasètz un clic drech o seleccionatz a partir del menut Executar :\n * 1. Executar per avalorar lo tèxte seleccionat (%1$S),\n * 2. Examinar per metre en plaça un objècte Inspector sul resultat (%2$S), o,\n * 3. Afichar per inserir lo resultat dins un comentari aprèp la seleccion. (%3$S)\n */\n\n
 
+# LOCALIZATION NOTE  (scratchpad.noargs): This error message is shown when
+# Scratchpad instance is created without any arguments. Scratchpad window
+# expects to receive its unique identifier as the first window argument.
+scratchpad.noargs=Scratchpad was created without any arguments.
+
 # LOCALIZATION NOTE  (notification.browserContext): This is the message displayed
 # over the top of the editor when the user has switched to browser context.
 browserContext.notification=Aquesta lausa JavaScript s'executa dins lo contèxte del navigador.
@@ -78,3 +83,7 @@ browserContext.notification=Aquesta lausa JavaScript s'executa dins lo contèxte
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/fr/Outils/Ardoise
+
+# LOCALIZATION NOTE (fileExists.notification): This is the message displayed
+# over the top of the the editor when a file does not exist.
+fileNoLongerExists.notification=This file no longer exists.
