--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -63,7 +63,7 @@ NetworkPanel.label=Inspectar la requèsta ret
 # LOCALIZATION NOTE (NetworkPanel.deltaDurationMS):
 #
 # This string is used to show the duration between two network events (e.g
-# request and respones header or response header and response body).
+# request and response header or response header and response body).
 NetworkPanel.durationMS=%Sms
 # LOCALIZATION NOTE (NetworkPanel.imageSizeDeltaDurationMS):
 # This string is used to show the duration between the response header and the
@@ -145,3 +145,42 @@ maxTimersExceeded=Lo nombre maximal de minutadors permeses sus aquesta pagina es
 # Console and tries the Update button, but the new result no longer returns an
 # object that can be inspected.
 JSTerm.updateNotInspectable=En seguida de la reavaloracion de vòstra pivada, lo resultat pòt pas mai èsser examinat.
+
+# LOCALIZATION NOTE (remoteWebConsolePromptTitle): The title displayed on the
+# Web Console prompt asking for the remote host and port to connect to.
+remoteWebConsolePromptTitle=Connexion distanta
+
+# LOCALIZATION NOTE (remoteWebConsolePromptMessage): The message displayed on the
+# Web Console prompt asking for the remote host and port to connect to.
+remoteWebConsolePromptMessage=Completar lo nom de l'òste e lo numèro de pòrt (òste:pòrt)
+
+# LOCALIZATION NOTE (remoteWebConsoleSelectTabTitle): The title displayed on the
+# Web Console prompt asking the user to pick a tab to attach to.
+remoteWebConsoleSelectTabTitle=Tab list - Remote Connection
+
+# LOCALIZATION NOTE (remoteWebConsoleSelectTabMessage): The message displayed on the
+# Web Console prompt asking the user to pick a tab to attach to.
+remoteWebConsoleSelectTabMessage=Select one of the tabs you want to attach to, or select the global console.
+
+# LOCALIZATION NOTE (listTabs.globalConsoleActor): The string displayed for the
+# global console in the tabs selection.
+listTabs.globalConsoleActor=*Global Console*
+
+# LOCALIZATION NOTE (longStringEllipsis): The string displayed after a long
+# string. This string is clickable such that the rest of the string is retrieved
+# from the server.
+longStringEllipsis=[…]
+
+# LOCALIZATION NOTE (executeEmptyInput): This is displayed when the user tries
+# to execute code, but the input is empty.
+executeEmptyInput=No value to execute.
+
+# LOCALIZATION NOTE (NetworkPanel.fetchRemainingResponseContentLink): This is
+# displayed in the network panel when the response body is only partially
+# available.
+NetworkPanel.fetchRemainingResponseContentLink=Fetch the remaining %1$S bytes
+
+# LOCALIZATION NOTE (NetworkPanel.fetchRemainingRequestContentLink): This is
+# displayed in the network panel when the request body is only partially
+# available.
+NetworkPanel.fetchRemainingRequestContentLink=Fetch the request body (%1$S bytes)
