--- a/browser/pdfviewer/viewer.properties
+++ b/browser/pdfviewer/viewer.properties
@@ -1,6 +1,16 @@
-# This Source Code Form is subject to the terms of the Mozilla Public
-# License, v. 2.0. If a copy of the MPL was not distributed with this
-# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+# Copyright 2012 Mozilla Foundation
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
 # Main toolbar buttons (tooltips and alt text for images)
 previous.title=Pagina precedenta
@@ -40,8 +50,8 @@ outline.title=Afichar los marcapaginas
 outline_label=Marcapaginas del document
 thumbs.title=Afichar las vinhetas
 thumbs_label=Vinhetas
-search_panel.title=Recercar dins lo document
-search_panel_label=Recercar
+findbar.title=Trobar dins lo document
+findbar_label=Recercar
 
 # Document outline messages
 no_outline=Pas cap de marcapaginas disponible
@@ -55,12 +65,22 @@ thumb_page_title=Pagina {{page}}
 thumb_page_canvas=Vinheta de la pagina {{page}}
 
 # Context menu
+first_page.label=Anar a la primièra pagina
+last_page.label=Anar a la darrièra pagina
 page_rotate_cw.label=Rotacion orària
 page_rotate_ccw.label=Rotacion antiorària
 
-# Search panel button title and messages
-search=Recercar
-search_terms_not_found=(Tèrme introbable)
+# Find panel button title and messages
+find_label=Recercar
+find_previous.title=Tròba l'ocurréncia precedenta de la frasa
+find_previous_label=Precedent
+find_next.title=Tròba l'ocurréncia venenta de la frasa
+find_next_label=Seguent
+find_highlight=Suslinhar tot
+find_match_case_label=Respectar la cassa
+find_reached_top=Naut de la pagina atench, perseguida dempuèi lo bas
+find_reached_bottom=Bas de la pagina atench, perseguida al començament
+find_not_found=Frasa pas trobada
 
 # Error panel labels
 error_more_info=Mai de detalhs
@@ -90,6 +110,7 @@ page_scale_actual=Talha vertadièra
 # Loading indicator messages
 loading_error_indicator=Error
 loading_error=Una error s'es producha pendent lo cargament del fichièr PDF.
+invalid_file_error=Fichièr PDF invalid o corromput.
 
 # LOCALIZATION NOTE (text_annotation_type): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
